--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,19 +11,23 @@
         <div class="d-flex flex-wrap align-items-center justify-content-between">
 
             <!-- Выпадающее меню с категориями слева -->
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="categoryDropdown" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-                    Categories
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
-                    <li><a class="dropdown-item" href="#">All Categories</a></li>
-                    <li><a class="dropdown-item" href="#">Телевизоры</a></li>
-                    <li><a class="dropdown-item" href="#">Пылесосы</a></li>
-                    <li><a class="dropdown-item" href="#">Холодильники</a></li>
-                    <li><a class="dropdown-item" href="#">Смартфоны</a></li>
-                    <li><a class="dropdown-item" href="#">Компьютеры</a></li>
-                </ul>
-            </div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Categories
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <!-- Здесь вы можете добавить элементы для каждой категории -->
+                                <a class="dropdown-item" href="#">Категория 1</a>
+                                <a class="dropdown-item" href="#">Категория 2</a>
+                                <a class="dropdown-item" href="#">Категория 3</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 
             <!-- Поиск и другие элементы справа -->
             <div class="d-flex">
@@ -72,6 +76,10 @@
         </tbody>
     </table>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </body>
 </html>
