--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Device and Characteristics</title>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+
 <header class="p-3 mb-3 border-bottom">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-between">
 
-            <!-- Выпадающее меню с категориями слева -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -19,7 +20,6 @@
                                 Categories
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <!-- Здесь вы можете добавить элементы для каждой категории -->
                                 <a class="dropdown-item" href="#">Категория 1</a>
                                 <a class="dropdown-item" href="#">Категория 2</a>
                                 <a class="dropdown-item" href="#">Категория 3</a>
@@ -29,7 +29,6 @@
                 </div>
             </nav>
 
-            <!-- Поиск и другие элементы справа -->
             <div class="d-flex">
                 <form class="col-12 col-lg-auto me-lg-3" role="search">
                     <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
@@ -52,11 +51,6 @@
     </div>
 </header>
 
-<!-- Добавленные строки для подключения JavaScript Bootstrap -->
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-pzjw8z+gfdLWp/RlNX5La5EZ6tP6fevc4HA8ebmGZcSa4wGgmi1Y53n5OWiNr7PM" crossorigin="anonymous"></script>
-
-<!-- Блок таблицы для отображения продуктов -->
 <div class="container mt-5">
     <h2>All Products</h2>
     <table class="table">
@@ -72,14 +66,21 @@
             <td th:text="${product.name}"></td>
             <td th:text="${product.manufacturerCountry}"></td>
             <td th:text="${product.manufacturerName}"></td>
+            <td>
+                <!-- Добавлен цикл для вывода моделей для каждого продукта -->
+                <ul>
+                    <li th:each="model : ${product.availableModels}" th:text="${model.name}"></li>
+                </ul>
+            </td>
+
+
         </tr>
         </tbody>
     </table>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-pzjw8z+gfdLWp/RlNX5La5EZ6tP6fevc4HA8ebmGZcSa4wGgmi1Y53n5OWiNr7PM" crossorigin="anonymous"></script>
 
 </body>
 </html>
