--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,63 +15,67 @@
     $(document).ready(function () {
         // Обработчик события для каждой категории
         $('.dropdown-item').click(function (event) {
-
             event.preventDefault();
 
             // Получение id категории из атрибута data-category-id
             var categoryId = $(this).data('category-id');
 
-            // Фильтрация товаров по категории (ваш код)
+            // Фильтрация товаров по категории
             filterProductsByCategory(categoryId);
+        });
+
+        // Добавляем обработчик для "Все категории"
+        $('#allCategories').click(function (event) {
+            event.preventDefault();
+
+            // Отображаем все категории
+            filterProductsByCategory(-1);
         });
     });
 
-function filterProductsByCategory(categoryId) {
-    $.ajax({
-        url: '/filterProducts?categoryId=' + categoryId,
-        type: 'GET',
+    function filterProductsByCategory(categoryId) {
+        $.ajax({
+            url: '/filterProducts?categoryId=' + categoryId,
+            type: 'GET',
+            success: function (data) {
+                // Очищаем текущий HTML-контент таблицы
+                $('tbody').empty();
 
-success: function (data) {
-    // Очищаем текущий HTML-контент таблицы
-    $('tbody').empty();
+                // Перебираем полученные данные и обновляем HTML-контент таблицы
+                for (var i = 0; i < data.length; i++) {
+                    var product = data[i];
+                    var row = '<tr>';
+                    row += '<td>' + product.name + '</td>';
+                    row += '<td>' + product.manufacturerCountry + '</td>';
+                    row += '<td>' + product.manufacturerName + '</td>';
+                    row += '<td>';
 
-    // Перебираем полученные данные и обновляем HTML-контент таблицы
-    for (var i = 0; i < data.length; i++) {
-        var product = data[i];
-        var row = '<tr>';
-        row += '<td>' + product.name + '</td>';
-        row += '<td>' + product.manufacturerCountry + '</td>';
-        row += '<td>' + product.manufacturerName + '</td>';
-        row += '<td>';
+                    // Добавляем модели в одну ячейку
+                    if (product.availableModels.length > 0) {
+                        row += '<ul>';
+                        for (var j = 0; j < product.availableModels.length; j++) {
+                            row += '<li>' + product.availableModels[j].name + '</li>';
+                        }
+                        row += '</ul>';
+                    } else {
+                        row += 'No models available';
+                    }
 
-        // Добавляем модели в одну ячейку
-        if (product.availableModels.length > 0) {
-            row += '<ul>';
-            for (var j = 0; j < product.availableModels.length; j++) {
-                row += '<li>' + product.availableModels[j].name + '</li>';
+                    row += '</td></tr>';
+
+                    // Добавляем строку в таблицу
+                    $('tbody').append(row);
+                }
+            },
+            error: function (xhr, status, error) {
+                // Обработка ошибки
+                console.error('Error while filtering products:', status, error);
             }
-            row += '</ul>';
-        } else {
-            row += 'No models available';
-        }
-
-        row += '</td></tr>';
-
-        // Добавляем строку в таблицу
-        $('tbody').append(row);
+        });
     }
-},
-
-
-        error: function (xhr, status, error) {
-            // Обработка ошибки
-            console.error('Error while filtering products:', status, error);
-        }
-    });
-}
-
-
 </script>
+
+
 
 <header class="p-3 mb-3 border-bottom">
     <div class="container">
@@ -86,6 +90,7 @@ success: function (data) {
                                 Categories
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#" data-category-id="-1" >Все категории</a>
                                 <a class="dropdown-item" href="#" data-category-id="1">Телевизоры</a>
                                 <a class="dropdown-item" href="#" data-category-id="2">Пылесосы</a>
                                 <a class="dropdown-item" href="#" data-category-id="3">Холодильники</a>
